--- a/style.css
+++ b/style.css
@@ -1,26 +1,44 @@
-*{
+* {
     box-sizing: border-box;
-    --box-width:960px;
-    --box-height:960px;
+}
+
+.head{
+    text-align: center;
+}
+
+.title{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.input{
+    max-width: 50%;
+    font-size: 1.5rem;
+    padding: 10px;
+    border:0;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.footer{
+    text-align: center;
+}
+
+.main{
+    display: flex;
+    justify-content: center;
 }
 
 .box-container{
-    display:flex;
-    max-width: 960px;
-    max-height: 960px;
+    display: flex;
+    width: 964px;
+    height: 964px;
+    border: 2px solid #777;
     flex-wrap: wrap;
 }
 
 .box{
-    border: 1px solid black;
-    width: var(--box-width);
-    height: var(--box-height);
-    min-width: 96px;
-    min-height: 96px;
-    margin:0;
-    flex-shrink: 0;
-}
-
-.box:hover{
-    background-color: red;
+    min-width: 60px;
+    min-height: 60px;
 }
